# autoxrandr

./: Cargo.toml  readme.md
src/: main.rs  parse_xrandr_output.rs  profile.rs  xrandr_output.rs
