[package]
name = "autoxrandr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autoxrandr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
home = "0.5.9"
nom = "7.1.3"
owo-colors = "4.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
